--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 至善( •̀ ω •́ )✧
+title: Howoow's Blog
 subtitle: ""
-description: "Wu Hao's Blog"
-keywords: Wu Hao, Blog
-author: Wu Hao
+description: "Howoow's Blog"
+keywords: Howoow, Wu Hao, Blog
+author: Howoow
 language: zh-CN
 timezone: "Asia/Shanghai"
 
